--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<div>
 					<img src="imgs/logo.svg" alt="eumequerobem">
 				</div>
-				<h2>Receba em seu e-mail hoje mesmo o e-book</h2>
-				<h1>“O que a pandemia <span>nos fez pensar</span>”</h1>
-				<p>e conheça o lado bom que esse momento difícil nos proporcionou.</p>
+				<h2>E-book</h2>
+				<h1>Dicas de como planejar seu futuro com segurança</h1>
+				<p>Entenda a importância de se prevenir e saiba como fazer isso de maneira bem simples e didática, mesmo que você nunca tenha planejado nada.</p>
 			</div>
 			<div class="content-img">
 				<div class="img-wrapper">
@@ -56,19 +56,19 @@
 	</header>
 
 	<main id=moduleFeaturesAndBenefits>
-		
-	
 		<section id="moduleBenefits">
 			<div class="container">
 				<div class="content-text">
 					<div class="wrapper">
-						<h2>Por que eu devo <br><span>baixar o e-book?</span></h2>
-						<p>Analisamos o cenário atual e concluímos que 6 grandes tendências permanecerão, cada vez mais, fortes no mundo pós-pandemia. Por isso, cadastre-se agora mesmo para ficar um passo à frente de todas as inovações que estão surgindo.</p>
-					</div>
-				</div>
-				<div class="content-img">
-					<div>
-						<img src="imgs/bgCara.png" alt="Uma pessoa pensando">
+						<h2 class="title1">Por que baixar<span> este e-book?</span></h2>
+						<p>Você vai encontrar dicas simples e métodos fáceis para testar e saber como se organizar diante de situações adversas no seu dia a dia e alcançar ótimos resultados pessoal e profissional com total segurança e assertividade. </p>
+						<h2 class="title2">O que você <span>vai aprender</span> neste e-book:</span></h2>
+						<ol class="list-items">
+							<li>Passo a passo magnífico do planejamento seguro.</li>
+							<li>Como se prevenir de riscos traçando metas.</li>
+							<li>Como diferenciar seus objetivos.</li>
+							<li>Como trabalhar seu emocional.</li>
+						</ol>
 					</div>
 				</div>
 			</div>
@@ -77,9 +77,7 @@
 		<section id="moduleFeature">
 			<div class="container">
 				<div class="content-text">
-					<h2>Cada detalhe desse e-book foi pensado exclusivamente para te deixar atualizado sobre
-						<span>as mudanças do “novo mundo”</span>.
-					</h2>
+					<h2>Baixe o e-book gratuito para ter acesso ao material!</h2>
 				</div>
 				<form id="lead" method="POST" action="index.php" data-ajax="false">
 					<input type="hidden" name="page" value="marca_view_email" />
@@ -107,7 +105,7 @@
 								required
 							/>
 						</div>
-						<button type="submit" class="btn">Receber minha cópia grátis</button>
+						<button type="submit" class="btn">QUERO MEU E-BOOK</button>
 					</div>
 					<div class="input-group-wrap">
 						<div class="custom-control">
@@ -143,39 +141,11 @@
 		</section>
 	</main>
 
-	<section id="moduleBenefits-1">
-		<div class="container">
-			<div class="info">
-				<h2>Conheça os pontos positivos da pandemia Covid-19 para tirar o melhor proveito dela e não sofrer com a crise.</h2>
-			</div>
-
-			<div class="info">
-				<h2>Descubra como as empresas conseguiram se erguer e driblar obstáculos e desafios!</h2>
-			</div>
-
-			<div class="info">
-				<h2>Como a tecnologia vem se tornando o braço direito da sociedade nas questões diárias.</h2>
-			</div>
-
-			<div class="info">
-				<h2>Os impactos da transformação digital na educação brasileira.</h2>
-			</div>
-
-			<div class="info">
-				<h2>A intensificação do empreendedorismo digital que forma novos milionários todos os dias.</h2>
-			</div>
-
-			<div class="info">
-				<h2>O aumento explosivo do uso de aplicativos durante a pandemia, como sendo uma forte tendência atualmente.</h2>
-			</div>
-		</div>
-	</section>
 
 	<footer id="moduleFooter">
 		<div class="container">
-			<div class="content-text menu-item">
-				<h2>Dê o primeiro passo para <span>conhecer o seu novo futuro!</span></h2>
-				<a href="#moduleFeature" class="btn">RECEBER MEU E-BOOK</a>
+			<div class="content-img menu-item">
+				<img src="imgs/logo.svg" alt="eumequerobem">
 			</div>
 			<div class="termos">
 				<a href="?page=navega&pg=politica" target="_blank" rel="noopener">Política de privacidade</a>
