--- a/obrigado.html
+++ b/obrigado.html
@@ -7,32 +7,32 @@
 
 	<!-- Meta para HTML puro -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
-	<meta name="description" content="" />
+	<meta name="description" content="Dicas de como planejar seu futuro com segurança" />
 	<meta name="keywords" content="Sample, HTML5, CSS3" />
 
 	<!-- Meta para Publicação do Facebook -->
 	<meta property="og:locale" content="pt-br" />
 	<meta property="og:url" content="https://lp.eumequerobem.com.br/landingcc/?origem=MADNET_SISOU_HUB_LEAD_EBOOK2" />
-	<meta property="og:title" content="O que a pandemia nos fez pensar" />
+	<meta property="og:title" content="Dicas de como planejar seu futuro com segurança" />
 	<meta property="og:site_name" content="Eu Me Quero Bem" />
-	<meta property="og:description" content="e conheça o lado bom que esse momento difícil nos proporcionou." />
+	<meta property="og:description" content="Dicas de como planejar seu futuro com segurança" />
 
 	<meta property="og:type" content="website" />
 
 	<!-- Meta para Publicação do Twitter -->
-	<meta name="twitter:site" content="O que a pandemia nos fez pensar" />
+	<meta name="twitter:site" content="Dicas de como planejar seu futuro com segurança" />
 	<meta name="twitter:title" content="Eu Me Quero Bem" />
-	<meta name="twitter:description" content="e conheça o lado bom que esse momento difícil nos proporcionou." />
+	<meta name="twitter:description" content="Dicas de como planejar seu futuro com segurança" />
 	<meta name="twitter:url" content="https://lp.eumequerobem.com.br/landingcc/?origem=MADNET_SISOU_HUB_LEAD_EBOOK2" />
 	<meta name="twitter:image" content="imgs/screenshot-e-Book.png" />
 	<meta name="twitter:card" content="summary" />
 
-	<meta http-equiv="refresh" content="5; URL='https://lp.eumequerobem.com.br/landingcc/?origem=MADNET_SISOU_HUB_LEAD_EBOOK2'"/>
+	<!-- <meta http-equiv="refresh" content="5; URL='https://lp.eumequerobem.com.br/landingcc/?origem=MADNET_SISOU_HUB_LEAD_EBOOK2'"/> -->
 
 	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon01.png" />
 
 	<link rel="stylesheet" href="css/style-1.0.1.css" />
-	<title>O que a pandemia nos fez pensar</title>
+	<title>Dicas de como planejar seu futuro com segurança</title>
 </head>
 
 <body>
@@ -40,9 +40,16 @@
 	<header id="moduleBanner" class="obrigado">
 		<div class="container">
 			<div class="content-text">
-				<h2>Receba em seu e-mail hoje mesmo o e-book</h2>
-				<h1>“O que a pandemia <span>nos fez pensar</span>”</h1>
-				<p>e conheça o lado bom que esse momento difícil nos proporcionou.</p>
+				<div>
+					<img src="imgs/logo.svg" alt="eumequerobem">
+				</div>
+				<h2>E-book</h2>
+				<h1>Dicas de como planejar seu futuro com segurança</h1>
+			</div>
+			<div class="content-img obrigado">
+				<div class="img-wrapper">
+					<img src="imgs/animate.svg" alt="Ebook">
+				</div>
 			</div>
 		</div>
 	</header>
@@ -58,8 +65,12 @@
 
 	<footer id="moduleFooter">
 		<div class="container">
-			<div class="content-text">
-				<h2>Dê o primeiro passo para <span>conhecer o seu novo futuro!</span></h2>
+			<div class="content-img menu-item">
+				<img src="imgs/logo.svg" alt="eumequerobem">
+			</div>
+			<div class="termos">
+				<a href="?page=navega&pg=politica" target="_blank" rel="noopener">Política de privacidade</a>
+				<a href="?page=navega&pg=termos" target="_blank" rel="noopener">Termos de uso</a>
 			</div>
 		</div>
 	</footer>
